--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,21 @@ body {
     color: green;
 }
 
+header {
+    max-width: 1000px;
+    margin: auto;
+}
+
+main {
+    max-width: 1000px;
+    margin: auto;
+}
+
+footer {
+    max-width: 1000px;
+    margin: auto;
+}
+
 /* The actual styling */
 p {
     font-size: 20px;
@@ -26,11 +41,6 @@ img {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
-}
-
-#container {
-    max-width: 1000px;
-    margin: auto;
 }
 
 figure {
