Added final styliongs to list items, table, and figures.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-/* Required CSS styling definitions for autograde */
-
+/* START --- Required CSS styling definitions for autograde */
 body {
     display: block;
     margin: 8px;
@@ -12,6 +11,7 @@ body {
 #testP.funParagraph {
     color: green;
 }
+/* END --- Required CSS styling definitions for autograde */
 
 header {
     max-width: 1000px;
@@ -24,55 +24,90 @@ main {
     clear: both;
 }
 
+article {
+    display: block;
+    margin-bottom: 100px;;
+}
+
 footer {
     max-width: 1000px;
     margin: auto;
-}
-
-/* The actual styling */
-
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    float: left;
-}
-
-li a {
-    display: block;
+    text-align: center;
 }
 
 p {
     font-size: 20px;
 }
+
+h1 {
+    text-align: center;
+    font-size: 3.2em;
+    margin-bottom: 16px;
+}
+
+h2#subtitle {
+    font-size: 1.85em;
+    text-align: center;
+}
+
+h3 {
+    font-size: 1.5em;
+}
+
 img {
     display: block;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 20px;
+}
+
+figure img {
+    display: block;
+    max-width: 100%;
+    margin: auto auto 15px auto;
+    border-radius: 20px;
 }
 
 figure {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
+    margin: 35px auto;
+    padding: 16px;
     background-color: lightgray;
+    border-radius: 20px;
+    filter: drop-shadow(0 0 8px rgb(91, 91, 91))
 }
 
-h1 {
+figcaption {
+    font-size: 16px;
+    font-style: italic;
     text-align: center;
 }
 
-#subtitle {
-    
+table, th, td {
+    border-width: 2px;
+    border-collapse: collapse;
+    border-style: solid;
+    border-color: black;
+    padding: 3px 8px;
 }
 
-#testP {
-
+th.align-left, td.align-left {
+    text-align: left;
 }
 
-.funParagraph {
+td {
+    text-align: center;
+    padding: 3px 8px;
+}
 
+
+article ul {
+    padding: 15px auto;
+}
+
+article ul li {
+    list-style-type: square;
+    font-size: 18px;
+    margin-top: 15px;
 }
