--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,10 @@ figcaption {
     text-align: center;
 }
 
+table {
+    margin: auto;
+}
+
 table, th, td {
     border-width: 2px;
     border-collapse: collapse;
